--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1 class="logo">Portfolio</h1>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
                 <li><a class="active" href="contact.html">Contact</a></li>
             </ul>
